[gd_scene format=3 uid="uid://ds1473sk2eko3"]

[ext_resource type="PackedScene" uid="uid://4foia1uo3y5r" path="res://szenes/header.tscn" id="1_b0bpb"]
[ext_resource type="Theme" uid="uid://dethatjpkswlp" path="res://assets/mainTheme.tres" id="1_clwqj"]
[ext_resource type="Script" uid="uid://b4pdov2jggaha" path="res://scripts/choose_quiz.gd" id="1_s8ves"]

[node name="ChooseQuiz" type="Control" unique_id=750039972]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8ves")

[node name="Panel" type="Panel" parent="." unique_id=1138366565]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_clwqj")
theme_type_variation = &"BackgroundPanel"

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=415937424]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 140

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer" unique_id=922771671]
custom_minimum_size = Vector2(0, 1377.805)
layout_mode = 2
size_flags_vertical = 0
vertical_scroll_mode = 2
scroll_hint_mode = 3

[node name="QuizList" type="VBoxContainer" parent="MarginContainer/ScrollContainer" unique_id=648090939]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer" unique_id=1488544873]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1986445701]
layout_mode = 2
size_flags_vertical = 8

[node name="AllButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1280666949]
unique_name_in_owner = true
layout_mode = 2
text = "Choose all"

[node name="DoneButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=537528882]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Header" parent="." unique_id=1407986050 instance=ExtResource("1_b0bpb")]
layout_mode = 1
titel = "Choose a quiz"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AllButton" to="." method="_on_all_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="logoClicked" from="Header" to="." method="_on_header_logo_clicked"]
